--- a/WhereToPlay/app/src/main/res/layout/item_reserve.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_reserve.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="store"
-            type="com.fanc.wheretoplay.datamodel.StoreList.Store"/>
+            type="com.fanc.wheretoplay.datamodel.StoreList.Store" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -22,7 +22,7 @@
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:layout_width="0dp"
@@ -31,20 +31,38 @@
             app:layout_constraintBottom_toBottomOf="@+id/tv_reserve_item_address"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item"/>
+            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item" />
 
         <TextView
             android:id="@+id/tv_reserve_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_5"
-            android:text="@{store.name}"
-            android:textColor="@color/text_black"
+            android:ems="1"
+            android:maxLines="10"
+
+            android:textColor="@color/text_white"
             android:textSize="@dimen/textsize_level3"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.025"
+            app:layout_constraintHorizontal_bias="0.039"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.075" /><!--android:text="@{store.name}"-->
+
+       <com.fanc.wheretoplay.view.VerticalTextView
+           android:id="@+id/vt_reserve"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Fashion Shanghai 上海"
+           android:gravity="top"
+           android:textColor="@color/text_white"
+           android:textSize="@dimen/textsize_level3"
+           app:layout_constraintBottom_toBottomOf="@id/iv_reserve_item"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintHorizontal_bias="0.039"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toTopOf="@id/iv_reserve_item"
+           />
 
         <!--<TextView
             android:id="@+id/tv_reserve_item_discount"
@@ -71,12 +89,11 @@
             android:layout_marginTop="@dimen/margin_15"
             android:background="@drawable/discount"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/padding_20"
-            android:paddingRight="@dimen/padding_5"
+            android:paddingLeft="@dimen/padding_25"
             android:textColor="@color/textcolor_normal"
             android:textSize="@dimen/textsize_level4"
             app:layout_constraintRight_toRightOf="@+id/iv_reserve_item"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_reserve_item_distance"
@@ -87,7 +104,7 @@
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_reserve_item_address"
             app:layout_constraintStart_toEndOf="@+id/tv_reserve_item_address"
-            app:layout_constraintTop_toBottomOf="@+id/tv_reserve_item_title"/>
+            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item" />
 
         <TextView
             android:id="@+id/tv_reserve_item_rise"
@@ -96,8 +113,9 @@
             android:text="@string/rise"
             android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_levelsmall"
-            app:layout_constraintBottom_toBottomOf="@id/tv_reserve_item_distance"
-            app:layout_constraintEnd_toEndOf="@+id/tv_reserve_item_discount_sum"/>
+            app:layout_constraintBottom_toBottomOf="@id/tv_reserve_item_price"
+            app:layout_constraintEnd_toEndOf="@+id/tv_reserve_item_discount_sum"
+             />
 
         <TextView
             android:id="@+id/tv_reserve_item_price"
@@ -106,14 +124,16 @@
             android:text="@{store.capita}"
             android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_level4"
-            app:layout_constraintBottom_toBottomOf="@id/tv_reserve_item_distance"
-            app:layout_constraintEnd_toStartOf="@+id/tv_reserve_item_rise"/>
+            android:layout_marginBottom="@dimen/padding_3"
+            app:layout_constraintEnd_toStartOf="@+id/tv_reserve_item_rise"
+            app:layout_constraintTop_toBottomOf="@id/iv_reserve_item"
+          /><!--   app:layout_constraintVertical_bias="0.1"-->
 
         <TextView
             android:id="@+id/tv_reserve_item_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_5"
+            android:layout_marginTop="@dimen/margin_8"
             android:drawableLeft="@drawable/reserve_address"
             android:drawablePadding="@dimen/padding_5"
             android:paddingBottom="@dimen/margin_10"
@@ -121,19 +141,11 @@
             android:textColor="@color/textcolor_3b"
             android:textSize="@dimen/textsize_levelsmall"
             app:layout_constraintBottom_toBottomOf="@+id/tv_reserve_item_rise"
-            app:layout_constraintStart_toStartOf="@+id/tv_reserve_item_title"
-            app:layout_constraintTop_toBottomOf="@+id/tv_reserve_item_title"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.025"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_reserve_item"
+            /><!--app:layout_constraintVertical_bias="0.217" -->
 
-
-
-        <ImageView
-            android:id="@+id/iv_reserve_service"
-            android:layout_width="@dimen/width_25"
-            android:layout_height="@dimen/height_25"
-            android:layout_marginRight="@dimen/margin_10"
-            android:src="@drawable/service_offline"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_reserve_item_distance"
-            app:layout_constraintRight_toLeftOf="@+id/tv_reserve_item_price"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
