--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="score"
-            type="com.fanc.wheretoplay.datamodel.ScoreList.Score"/>
+            type="com.fanc.wheretoplay.datamodel.ScoreList.ContentBean.ListBean"/>
     </data>
 
     <LinearLayout
