--- a/WhereToPlay/app/src/main/res/layout/activity_evaluation_success.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_evaluation_success.xml
@@ -99,7 +99,7 @@
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:paddingTop="4dp"
-        android:text="返回商家主页"
+        android:text="返回首页"
         android:textColor="#ffc4483c" />
 
     <View
