--- a/WhereToPlay/app/src/main/res/layout/item_reserve.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_reserve.xml
@@ -98,6 +98,7 @@
             android:text="@string/rise"
             android:textColor="@color/text_black"
             android:textSize="@dimen/textsize_levelsmall"
+            android:layout_marginBottom="@dimen/padding_3"
             app:layout_constraintBottom_toBottomOf="@id/tv_reserve_item_price"
             app:layout_constraintEnd_toEndOf="@+id/tv_reserve_item_discount_sum"
              />
