--- a/WhereToPlay/app/src/main/res/layout/fragment_room.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_room.xml
@@ -53,7 +53,7 @@
                 android:drawableLeft="@drawable/reserve_address"
                 android:drawablePadding="@dimen/padding_10"
                 android:maxWidth="@dimen/width_260"
-                android:textColor="@color/text_black"
+                android:textColor="@color/textcolor_btn_normal"
                 android:textSize="@dimen/textsize_levelsmall"/>
 
             <TextView
@@ -63,7 +63,7 @@
                 android:layout_alignBaseline="@+id/tv_room_address"
                 android:layout_marginLeft="@dimen/margin_40"
                 android:layout_toRightOf="@+id/tv_reserve_info_address"
-                android:textColor="@color/text_black"
+                android:textColor="@color/textcolor_btn_normal"
                 android:textSize="@dimen/textsize_levelsmall"/>
         </RelativeLayout>
 
