--- a/WhereToPlay/app/src/main/res/layout/fragment_register_agr.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_register_agr.xml
@@ -8,14 +8,26 @@
         android:id="@+id/tm_agreement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <WebView
-        android:id="@+id/wv_register_agr"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tm_agreement"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
-    </WebView>
+        app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <!--屏幕上不能完全显示，所以加个底部距离35dp-->
+            <WebView
+                android:id="@+id/wv_register_agr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/margin_35"
+                >
+            </WebView>
+        </LinearLayout>
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
