--- a/WhereToPlay/app/src/main/res/layout/item_collection.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_collection.xml
@@ -23,19 +23,27 @@
             android:layout_marginLeft="@dimen/margin_10"
             android:button="@drawable/selector_pay_way"
             android:visibility="gone"/>
-
+        <View
+            android:id="@+id/view_collection"
+            android:layout_width="@dimen/margin_15"
+            android:layout_height="@dimen/margin_15"
+            />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:padding="@dimen/padding_15">
+            android:paddingEnd="@dimen/margin_15"
+            android:paddingTop="@dimen/margin_15"
+            android:paddingBottom="@dimen/margin_15"
+            >
 
             <ImageView
                 android:id="@+id/iv_item_collection"
                 android:layout_width="@dimen/width_110"
                 android:layout_height="@dimen/height_90"
                 android:scaleType="centerCrop"
-                app:url="@{collection.path}"/>
+                app:url="@{collection.path}"
+                />
 
             <TextView
                 android:id="@+id/tv_item_collection_title"
