--- a/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_integral_detail.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{score.name}"
-            android:textColor="@color/white"
+            android:textColor="#333333"
             android:textSize="@dimen/normal_textsize"/>
 
         <TextView
@@ -28,7 +28,7 @@
             android:layout_marginLeft="@dimen/margin_10"
             android:layout_weight="1"
             android:text="@string/get_integral_way"
-            android:textColor="@color/white"
+            android:textColor="#333333"
             android:textSize="@dimen/normal_textsize"/>
 
         <TextView
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_10"
             android:text='@{"+"+(int)Double.parseDouble(score.score_detail)}'
-            android:textColor="@color/text_and_buttor_orange"
+            android:textColor="#c4483c"
             android:textSize="@dimen/textsize_level2"/>
     </LinearLayout>
 
